force-app/main/default/objects/PayPal_Case__c/PayPal_Case__c.object-meta.xml
<CustomObject>
    <description>Cases created in internal PayPal systems like Disputes, PET, SCM and so on.</description>
    <label>PayPal Case</label>
    <nameField>
        <label>PayPal Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PayPal Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>