force-app/main/default/objects/PayPal_Case__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cases associated with an account</description>
    <inlineHelpText>Cases associated with an account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PayPal Cases</relationshipLabel>
    <relationshipName>PayPal_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>