force-app/main/default/objects/PayPal_Case__c/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <description>Case Id</description>
    <inlineHelpText>Case Id</inlineHelpText>
    <label>Case Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>