force-app/main/default/objects/PayPal_Case__c/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <description>Case Status</description>
    <inlineHelpText>Case Status</inlineHelpText>
    <label>Case Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>