force-app/main/default/objects/PayPal_Case__c/fields/Case_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Case_Subtype__c</fullName>
    <description>Case Subtype</description>
    <inlineHelpText>Case Subtype</inlineHelpText>
    <label>Case Subtype</label>
    <length>128</length>
    <type>Text</type>
</CustomField>