force-app/main/default/objects/PayPal_Case__c/fields/Case_System__c.field-meta.xml
<CustomField>
    <fullName>Case_System__c</fullName>
    <description>Case system - Attack/Gold/PET/SCM/etc.,</description>
    <inlineHelpText>Case system - Attack/Gold/PET/SCM/etc.,</inlineHelpText>
    <label>Case System</label>
    <length>64</length>
    <type>Text</type>
</CustomField>