force-app/main/default/objects/PayPal_Case__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>Case Type</description>
    <inlineHelpText>Case Type</inlineHelpText>
    <label>Case Type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>