force-app/main/default/objects/PayPal_Case__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <description>Case Party w.r.t. the current account</description>
    <inlineHelpText>Case Party w.r.t. the current account</inlineHelpText>
    <label>Party</label>
    <length>128</length>
    <type>Text</type>
</CustomField>