force-app/main/default/objects/PayPal_Case__c/fields/Time_Created__c.field-meta.xml
<CustomField>
    <fullName>Time_Created__c</fullName>
    <description>PayPal case created time</description>
    <inlineHelpText>PayPal case created time</inlineHelpText>
    <label>Time Created</label>
    <type>DateTime</type>
</CustomField>