force-app/main/default/objects/PayPal_Case__c/fields/Transaction_Ids_JSON__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Ids_JSON__c</fullName>
    <description>A case can be associated with one or more transaction ids depending on the type. This field will store the array of transaction ids in the JSON format which can be deserialized into array back when needed.</description>
    <inlineHelpText>A case can be associated with one or more transaction ids depending on the type. This field will store the array of transaction ids in the JSON format which can be deserialized into array back when needed.</inlineHelpText>
    <label>Transaction Ids JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>